<resources>
    <string name="app_name">Financial Manager</string>
    <string name="date">26 października</string>
    <string name="placeNameMock">Hala Koszyki</string>
    <string name="categoryMock">Wyjścia i wydarzenia</string>
    <string name="amountMock">-100,00zł</string>
    <string name="IncomesAndOutcomesLabel">Podsumowanie</string>
    <string name="incomes">Przychody</string>
    <string name="outcomes">Wydatki</string>
    <string name="expensesAmount">2115,15zł</string>
    <string name="expenses">Wydatki</string>
    <string name="addNewRecordContentDescription">Add new income or expense</string>
    <string name="incomesAmount">5137,13zł</string>
    <string name="saveAndContinue">Zapisz</string>
    <string name="transactionTitle">Nazwa</string>
    <string name="currency">PLN</string>
    <string name="currencyHint">0,00 zł</string>
    <string name="today">11/23/2022</string>
    <string name="SwitchIncome">Przychód?</string>
    <string name="share">Udostępnij</string>
    <string name="openMonthlyChartContentDescription">Otwórz zestawienie miesiąca</string>
    <string name="monthSpinnerContentDescription">Wybierz miesiąc</string>
    <string name="yearSpinnerContentDescription">Wybierz rok</string>
</resources>