<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SummaryFragment">

    <TextView
        android:id="@+id/incomesAndOutcomesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/IncomesAndOutcomesLabel"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expensesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/expenses"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/incomesTextView"
        app:layout_constraintStart_toStartOf="@+id/incomesTextView"
        app:layout_constraintTop_toBottomOf="@+id/incomesTextView" />

    <TextView
        android:id="@+id/incomesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/incomes"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/incomesAndOutcomesTextView"
        app:layout_constraintTop_toBottomOf="@+id/incomesAndOutcomesTextView" />

    <TextView
        android:id="@+id/incomesAmountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/incomesAmount"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/incomesAndOutcomesTextView"
        app:layout_constraintStart_toEndOf="@+id/incomesTextView"
        app:layout_constraintTop_toBottomOf="@+id/incomesAndOutcomesTextView" />

    <TextView
        android:id="@+id/expensesAmountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/expensesAmount"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/incomesAmountTextView"
        app:layout_constraintStart_toEndOf="@+id/expensesTextView"
        app:layout_constraintTop_toBottomOf="@+id/incomesAmountTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>